--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "cobe": "^0.6.3",
     "lucide-react": "0.105.0-alpha.4",
+    "motion": "^11.15.0",
     "next": "^15.1.2",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icon-cloud": "^4.1.4",
+    "react-spring": "^9.7.5",
     "sharp": "^0.33.5",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6"
